--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: community_organizing
+  database: community_organizing_dev
   pool: 5
-  username:
-  password: 
+  username: app
+  password: qwerty
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -46,15 +46,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: community_organizing
+  database: community_organizing_test
   pool: 5
-  username: 
-  password:
+  username: app
+  password: qwerty
 
 production:
   adapter: postgresql
   encoding: unicode
   database: community_organizing
   pool: 5
-  username: 
+  username:
   password:
